@@ -1,3 +1,7 @@
+May 24, 2007
+
+* ADDED: Work in progress to emit stand-alone HTML documentation files.
+
 Apr 11, 2007
 
 * FIXED: Two syntax errors in pldoc.css.
